# reedis

./: .gitignore  Cargo.toml  Protocol.notes  Protocol2.notes  Vagrantfile  readme.md  setup_vagrant.sh
.backup/: sp_async.rs
Server/: Cargo.toml
Server/src/: app_result.rs  client.rs  common_traits.rs  communication.rs  data.rs  database.rs  error.rs  main.rs  message_types.rs  parser.rs  parsers.rs  serializer.rs  socket_provider.rs  table.rs  tests.rs  types.rs  util.rs
Server/src/common_traits/: command.rs  command_result.rs  database.rs  event.rs  event_command.rs  event_table.rs  execution_context.rs  field.rs  parser.rs  parser_collection.rs  peek.rs  table.rs  table_methods.rs
Server/src/communication/: util.rs
Server/src/implementation/: command.rs
Server/src/message_types/: event.rs  event_command.rs
Server/src/parsers/: json_parser.rs
Server/src/tests/: communication.rs  communication_test.rs  database.rs  parser.rs
Server/src/tests/communication/: mock.rs
Server/src/tests/database/: mock.rs
Server/src/types/: wrapper.rs
TS Client/: .prettierrc.js  package.json
TS Client/src/: adaptor.ts
TSClient/: package.json  tsconfig.json  tslint.json
TSClient/src/: adaptor.ts  bench.ts  index.ts  parser.ts  serializer.ts  test.ts
src/: app_result.rs  array.rs  command_generator.rs  events.rs  executor.rs  main.rs  serializer.rs  socket_provider.rs  table.rs  types.rs
src/events/: event_handler_sp.rs  traits.rs  types.rs
src/types/: into.rs  table.rs  traits.rs  wrapper.rs
