[package]
name = "reedis2"
version = "0.1.0"
authors = ["Onurcan Camci <onurcamci@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#tokio = { version = "0.2", features = ["full"] }
byteorder = "*"
num_enum = "*"
